force-app/main/default/objects/Mst_Makers__c/Mst_Makers__c.object-meta.xml
<CustomObject>
    <label>メーカ</label>
    <nameField>
        <label>メーカ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>