force-app/main/default/objects/Mst_Makers__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <label>国種別（数字）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>国産車</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>外国車</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>