force-app/main/default/objects/Mst_Makers__c/fields/country_name__c.field-meta.xml
<CustomField>
    <fullName>country_name__c</fullName>
    <label>国種別（文字）</label>
    <length>24</length>
    <type>Text</type>
</CustomField>