force-app/main/default/objects/Mst_Makers__c/fields/disp_flg__c.field-meta.xml
<CustomField>
    <fullName>disp_flg__c</fullName>
    <defaultValue>&quot;1&quot;</defaultValue>
    <label>表示区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>disp_flg</valueSetName>
    </valueSet>
</CustomField>