force-app/main/default/objects/Mst_Makers__c/fields/maker__c.field-meta.xml
<CustomField>
    <fullName>maker__c</fullName>
    <externalId>true</externalId>
    <label>メーカー（数字）</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>