force-app/main/default/objects/Mst_Makers__c/fields/maker_name_eizi__c.field-meta.xml
<CustomField>
    <fullName>maker_name_eizi__c</fullName>
    <label>メーカー名（英語）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>