force-app/main/default/objects/Mst_Makers__c/fields/reserve1__c.field-meta.xml
<CustomField>
    <fullName>reserve1__c</fullName>
    <label>予備１</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>