force-app/main/default/objects/Mst_Makers__c/fields/reserve2__c.field-meta.xml
<CustomField>
    <fullName>reserve2__c</fullName>
    <label>予備２</label>
    <length>24</length>
    <type>Text</type>
</CustomField>